--- a/src/Integration.UnitTests_2017/packages.config
+++ b/src/Integration.UnitTests_2017/packages.config
@@ -1,9 +1,9 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
-  <package id="Castle.Core" version="3.3.3" targetFramework="net46" />
+  <package id="Castle.Core" version="4.2.1" targetFramework="net46" />
   <package id="EnvDTE" version="8.0.1" targetFramework="net46" />
   <package id="EnvDTE80" version="8.0.1" targetFramework="net46" />
-  <package id="FluentAssertions" version="4.18.0" targetFramework="net46" />
+  <package id="FluentAssertions" version="4.19.4" targetFramework="net46" />
   <package id="Microsoft.Alm.Authentication" version="4.0.0.1" targetFramework="net46" />
   <package id="Microsoft.IdentityModel.Clients.ActiveDirectory" version="3.13.8" targetFramework="net46" />
   <package id="Microsoft.Owin" version="3.0.1" targetFramework="net46" />
@@ -31,12 +31,14 @@
   <package id="Microsoft.VisualStudio.Utilities" version="15.0.26201" targetFramework="net46" />
   <package id="Microsoft.VisualStudio.Validation" version="15.0.82" targetFramework="net46" />
   <package id="Microsoft.Web.Xdt" version="2.1.1" targetFramework="net46" />
-  <package id="Moq" version="4.5.30" targetFramework="net46" />
+  <package id="Moq" version="4.8.1" targetFramework="net46" />
   <package id="Newtonsoft.Json" version="6.0.8" targetFramework="net46" />
   <package id="NuGet.Core" version="2.12.0" targetFramework="net46" />
   <package id="NuGet.Versioning" version="3.4.3" targetFramework="net46" />
   <package id="NuGet.VisualStudio" version="3.3.0" targetFramework="net46" />
   <package id="Owin" version="1.0" targetFramework="net46" />
   <package id="stdole" version="7.0.3301" targetFramework="net46" />
-  <package id="StrongNamer" version="0.0.3" targetFramework="net46" />
+  <package id="StrongNamer" version="0.0.6" targetFramework="net46" />
+  <package id="System.Threading.Tasks.Extensions" version="4.3.0" targetFramework="net46" />
+  <package id="System.ValueTuple" version="4.3.0" targetFramework="net46" />
 </packages>
