--- a/src/Integration.Vsix.UnitTests/packages.config
+++ b/src/Integration.Vsix.UnitTests/packages.config
@@ -1,8 +1,8 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
-  <package id="Castle.Core" version="3.3.3" targetFramework="net46" />
+  <package id="Castle.Core" version="4.2.1" targetFramework="net46" />
   <package id="EnvDTE" version="8.0.0" targetFramework="net46" />
-  <package id="FluentAssertions" version="4.18.0" targetFramework="net46" />
+  <package id="FluentAssertions" version="4.19.4" targetFramework="net46" />
   <package id="Microsoft.CodeAnalysis.Analyzers" version="1.0.0" targetFramework="net46" />
   <package id="Microsoft.CodeAnalysis.Common" version="1.0.0" targetFramework="net46" />
   <package id="Microsoft.CodeAnalysis.CSharp" version="1.0.0" targetFramework="net46" />
@@ -35,7 +35,7 @@
   <package id="Microsoft.VisualStudio.Threading" version="14.1.131" targetFramework="net46" />
   <package id="Microsoft.VisualStudio.Utilities" version="14.3.25407" targetFramework="net46" />
   <package id="Microsoft.VisualStudio.Validation" version="14.1.111" targetFramework="net46" />
-  <package id="Moq" version="4.5.30" targetFramework="net46" />
+  <package id="Moq" version="4.8.1" targetFramework="net46" />
   <package id="stdole" version="7.0.3300" targetFramework="net46" />
   <package id="System.AppContext" version="4.3.0" targetFramework="net46" />
   <package id="System.Collections" version="4.3.0" targetFramework="net46" />
@@ -74,8 +74,10 @@
   <package id="System.Text.Encoding.Extensions" version="4.3.0" targetFramework="net46" />
   <package id="System.Threading" version="4.3.0" targetFramework="net46" />
   <package id="System.Threading.Tasks" version="4.3.0" targetFramework="net46" />
+  <package id="System.Threading.Tasks.Extensions" version="4.3.0" targetFramework="net46" />
   <package id="System.Threading.Tasks.Parallel" version="4.3.0" targetFramework="net46" />
   <package id="System.Threading.Thread" version="4.3.0" targetFramework="net46" />
+  <package id="System.ValueTuple" version="4.3.0" targetFramework="net46" />
   <package id="System.Xml.ReaderWriter" version="4.3.0" targetFramework="net46" />
   <package id="System.Xml.XDocument" version="4.3.0" targetFramework="net46" />
   <package id="System.Xml.XmlDocument" version="4.3.0" targetFramework="net46" />
