--- a/src/Integration.Vsix.UnitTests_2017/packages.config
+++ b/src/Integration.Vsix.UnitTests_2017/packages.config
@@ -1,8 +1,8 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
-  <package id="Castle.Core" version="3.3.3" targetFramework="net46" />
+  <package id="Castle.Core" version="4.2.1" targetFramework="net46" />
   <package id="EnvDTE" version="8.0.1" targetFramework="net46" />
-  <package id="FluentAssertions" version="4.18.0" targetFramework="net46" />
+  <package id="FluentAssertions" version="4.19.4" targetFramework="net46" />
   <package id="ManagedEsent" version="1.9.4" targetFramework="net46" />
   <package id="Microsoft.CodeAnalysis.Analyzers" version="1.0.0" targetFramework="net46" />
   <package id="Microsoft.CodeAnalysis.Common" version="1.0.0" targetFramework="net46" />
@@ -38,7 +38,7 @@
   <package id="Microsoft.VisualStudio.Threading" version="15.0.240" targetFramework="net46" />
   <package id="Microsoft.VisualStudio.Utilities" version="15.0.26201" targetFramework="net46" />
   <package id="Microsoft.VisualStudio.Validation" version="15.0.82" targetFramework="net46" />
-  <package id="Moq" version="4.5.30" targetFramework="net46" />
+  <package id="Moq" version="4.8.1" targetFramework="net46" />
   <package id="stdole" version="7.0.3301" targetFramework="net46" />
   <package id="System.AppContext" version="4.3.0" targetFramework="net46" />
   <package id="System.Collections" version="4.3.0" targetFramework="net46" />
@@ -77,6 +77,7 @@
   <package id="System.Text.Encoding.Extensions" version="4.3.0" targetFramework="net46" />
   <package id="System.Threading" version="4.3.0" targetFramework="net46" />
   <package id="System.Threading.Tasks" version="4.3.0" targetFramework="net46" />
+  <package id="System.Threading.Tasks.Extensions" version="4.3.0" targetFramework="net46" />
   <package id="System.Threading.Tasks.Parallel" version="4.3.0" targetFramework="net46" />
   <package id="System.Threading.Thread" version="4.3.0" targetFramework="net46" />
   <package id="System.ValueTuple" version="4.3.0" targetFramework="net46" />
