--- a/src/SonarQube.Client.Tests/packages.config
+++ b/src/SonarQube.Client.Tests/packages.config
@@ -1,7 +1,9 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
-  <package id="Castle.Core" version="4.1.1" targetFramework="net452" />
+  <package id="Castle.Core" version="4.2.1" targetFramework="net46" />
   <package id="FluentAssertions" version="4.19.4" targetFramework="net452" />
-  <package id="Moq" version="4.7.99" targetFramework="net452" />
+  <package id="Moq" version="4.8.1" targetFramework="net46" />
   <package id="Newtonsoft.Json" version="6.0.8" targetFramework="net46" />
+  <package id="System.Threading.Tasks.Extensions" version="4.3.0" targetFramework="net46" />
+  <package id="System.ValueTuple" version="4.3.0" targetFramework="net46" />
 </packages>
